localization - all localized

--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -4,5 +4,13 @@
   "save_button": "Зберегти",
   "buy_button": "Купити",
   "recipe_name": "назва",
-  "price": "ціна"
+  "price": "ціна",
+  "login": "УВІЙТИ",
+  "email": "Електронна адреса",
+  "password": "Пароль",
+  "register": "ЗАРЕЄСТРУВАТИСЯ",
+  "not_registered": "Ще не зареєстровані? Зареєструватися?",
+  "already_registered": "Вже зареєстровані? Увійти?",
+  "remove": "Видалити",
+  "log_out": "Вийти"
 }
